##Text encoding: utf-8

2011-02-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/circle.cc: fixed an non initialized variable issue.
	* libs/gcp/document.cc: don't always add new object to a new operation.
	* libs/gcp/operation.cc: clear extra white spaces.
	* plugins/loaders/ctfiles/ctfiles.cc: some work on molfiles.
	* plugins/paint/arrows/arrowtool.cc: fix undo after libs/gcp/document.cc
	change.
	* plugins/paint/text/texttool.cc: fix a crasher.

2011-02-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/bonds/bondtool.cc: fix hashes orientation.
	* themes/paint/Gcp-Modern: better hashes.

2011-02-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gogcpapp.cc: fix an alignment issue.
	* libs/gcp/document.cc: fix alignment with several children
	* libs/gcp/mechanism-step.cc: don't save an empty step.
	* libs/gcp/mechanism-step.h: ditto.
	* libs/gcp/reaction-step.cc: don't create empty steps.
	* libs/gcp/target.cc: remove signals when destroyed.
	* libs/gcp/target.h: ditto.
	* libs/gcu/object.cc: accept unsaved children in Object::SaveChildren().
	* plugins/paint/bonds/bondtool.cc: fixed an item position issue.

2011-02-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment.cc: allow for minus charge in the middel of a string.

2011-02-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: new comment.
	* libs/gcp/reaction-step.cc: more undo fix in reactions with curved arrows.

2011-02-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-step.cc: don't add new molecules when undoing a
	mechanism arrow deletion. [#32433]

2011-02-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: new CTfiles loader plugin.
	* plugins/loaders/ctfiles/Makefile.am: ditto.
	* plugins/loaders/ctfiles/ctfiles.cc: ditto.
	* plugins/loaders/ctfiles/plugin.xml.in: ditto.
	* other files: updated copyright.

2011-02-07  Jean Bréfort  <jean.brefort@normalesup.org>